--- a/sample/Dockerfile
+++ b/sample/Dockerfile
@@ -1,15 +1,25 @@
 # Use an official JDK 22 image as a base image
 FROM openjdk:22-jdk-slim
 
-# Set the working directory inside the container
+
+# Set the working directory in the container
 WORKDIR /app
 
-# Copy the application JAR file or project to the working directory
-# (assuming you have built the app and have the jar file)
+# Copy the Maven project files
+COPY pom.xml .
+COPY src ./src
+
+# Install Maven
+RUN apt-get update && apt-get install -y maven
+
+# Build the Spring Boot application
+RUN mvn clean package
+
+# Copy the JAR file to the container
 COPY target/sample-project.jar /app/sample.jar
 
 # Expose port 8080
 EXPOSE 8080
 
-# Command to run the application
-CMD ["java", "-jar", "sample.jar"]
+# Run the Spring Boot application
+ENTRYPOINT ["java", "-jar", "/app/sample.jar"]
